<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just java</string>
    <string name="input_name">Input Name</string>
    <string name="toppings">Toppings</string>
    <string name="whippedcream">Whipped Cream, ₹ 1</string>
    <string name="hotchoco">Hot Chocolate, ₹ 2</string>
    <string name="caramel">Caramel, ₹ 3</string>
    <string name="chocoice">Chocolate Ice Cream, ₹ 5</string>
    <string name="vanillaice">Vanilla Ice Cream, ₹ 5</string>
    <string name="Quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="rs">₹ 0.00</string>
    <string name="order">order</string>
    <string name="order_summ">Order Summary:</string>
    <string name="add_whipp">Add Whipped Cream? </string>
    <string name="add_hotchoco">Add Hot Chocolate?</string>
    <string name="add_cara">Add Caramel? </string>
    <string name="add_chocoice">Add Chocolate Ice Cream? </string>
    <string name="add_vanillaice">Add Vanilla Ice Cream? </string>
    <string name="qt">Quantity = </string>
    <string name="tot">Total = ₹ </string>
    <string name="ty">Thank You!</string>
    <string name="mqr_toast">Maximum Quantity Reached</string>
    <string name="mqr_toast2">Minimum Quantity Reached</string>
</resources>
